--- a/user-management/config.toml
+++ b/user-management/config.toml
@@ -1,6 +1,6 @@
 [server]
 host = "0.0.0.0"
-port = 8080
+port = 3000
 log_level = "info"  # Options: trace, debug, info, warn, error, fatal, panic
 read_timeout = "5s"
 write_timeout = "10s"
@@ -18,3 +18,8 @@ max_idle_conns = 10
 conn_max_lifetime = "5m"
 retry_attempts = 3
 retry_backoff = "2s"
+
+[temporal]
+host = "127.0.0.1:7233"
+namespace = ""
+queue_name = "user-management-queue"
