--- a/user-management/docker-compose.yml
+++ b/user-management/docker-compose.yml
@@ -13,7 +13,17 @@ services:
       - user-management-mysql-data:/var/lib/mysql
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-prootpassword"]
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "ping",
+          "-h",
+          "localhost",
+          "-u",
+          "root",
+          "-prootpassword",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -34,7 +44,6 @@ services:
       retries: 5
     networks:
       - user-management-network
-
 
   kafka:
     image: confluentinc/cp-kafka:7.6.0
@@ -62,7 +71,11 @@ services:
     volumes:
       - user-management-kafka-data:/var/lib/kafka/data
     healthcheck:
-      test: ["CMD-SHELL", "kafka-broker-api-versions --bootstrap-server localhost:9092 || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "kafka-broker-api-versions --bootstrap-server localhost:9092 || exit 1",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -85,31 +98,6 @@ services:
     networks:
       - user-management-network
 
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: user-management:latest
-    container_name: user-management-app
-    env_file:
-      - .env.docker
-    ports:
-      - "8080:8080"
-    depends_on:
-      mysql:
-        condition: service_healthy
-
-      redis:
-        condition: service_healthy
-
-
-      kafka:
-        condition: service_healthy
-
-    networks:
-      - user-management-network
-    restart: unless-stopped
-
 volumes:
   user-management-mysql-data:
     driver: local
@@ -117,10 +105,8 @@ volumes:
   user-management-redis-data:
     driver: local
 
-
   user-management-kafka-data:
     driver: local
-
 
 networks:
   user-management-network:
